Combate introducido al entrar en zonas, el inventario ahora se actualiza correctamente, las regiones muestran información sobre ellas, hostilidades programadas

--- a/Kenshi-DnD/MainWindow.xaml
+++ b/Kenshi-DnD/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kenshi_DnD"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1280">
+        Title="Kenshi_DND" Height="720" Width="1280">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
